Change name in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "product-recommendation-service",
+  "name": "product-recommendation",
   "version": "0.0.1",
   "description": "",
   "author": "",
